ring-automation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: ring.hinze.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ring-automation-service
                port: 
                  number: 8080
  tls:
    - hosts:
        - ring.hinze.dev
      secretName: ring-hinze-tls-secret
